--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
             android:hint="Pasword"
             android:id="@+id/pass_input_log"
             android:soundEffectsEnabled="true"
-            android:inputType="textVisiblePassword"
+            android:inputType="textPassword"
             />
 
         <Button
